github actions code change

--- a/.github/workflows/sample-email.yml
+++ b/.github/workflows/sample-email.yml
@@ -28,8 +28,19 @@ jobs:
           server_port: ${{ secrets.SMTP_PORT }}
           username: ${{ secrets.SMTP_USERNAME }}
           password: ${{ secrets.SMTP_PASSWORD }}
-          subject: ${{ github.job }} job is ${{ job.status }}          
-          body: ${{ github.job }} job in worflow ${{ github.workflow }} of ${{ github.repository }} has ${{ job.status }}          
+          subject: ${{ github.job }} job is ${{ job.status }}                    
           from: ${{ secrets.SMTP_FROM }}
           to: ${{ secrets.SMTP_TO }}
+          body: |             
+              Hello,
+                  This is an automated message from GitHub Actions.
+                    
+              Job status: ${{ job.status }} 
+              Commit Message: ${{ github.event.head_commit.message }}
+              Repository: ${{ github.repository }}    
+          
+              You can check the logs of the build here: ${{ github.event.repository.url }}/actions/runs/${{ github.run_id }}
+
+              Regards,
+              GitHub Actions
 
